Fix misaligned author photo.

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -392,7 +392,6 @@ $button-size: 1.5rem;
 		p,
 		.author-social {
 			display: block;
-			max-width: 125px;
 		}
 		h3 {
 			margin-top: 10px;
